# jobpulse-ai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROJECT_BOARD.md  README.md  demo_career_intelligence.py  demo_embedding_analytics.py  demo_ingestion.py  demo_market_discovery.py  demo_remoteok.py  demo_semantic_search.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pyproject.toml.dev  requirements.txt  validate_configs.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml  docs.yml  lint.yml  release.yml  security.yml  tests.yml
.streamlit/: config.toml
config/: application.yaml  dashboard.yaml  features.yaml  learning_graph.yaml  models.yaml  security.yaml  skill_metadata.yaml  skills.yaml
datasets/processed/: jobs_v1.0.csv  jobs_v1.0.json  jobs_v1.0.parquet  manifest.json
docs/: 02_SRS.md  deployment.md
docs/adr/: 0001-clean-architecture.md  0002-repository-and-uow.md  0003-local-embeddings.md  0004-faiss-vector-store.md  0005-cqrs-application-layer.md
docs/architecture/: case_study.md  components.md  database_er.md  deployment.md  sequence.md
examples/: demo_analytics.py  demo_learning_intelligence.py  demo_remoteok.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  d979f9b1c1b7_add_pgvector.py
ops/docker/: api.Dockerfile  dashboard.Dockerfile  migrate.Dockerfile  nginx.conf
ops/scripts/: bootstrap.sh  (+3 more)
tests/: test_startup.py
(+194 files in other folders)
